# spacemouse-rs

./: .gitignore  Cargo.toml  MagicMouse.gdextension  README.md  Taskfile.yml  mise.toml  plugin.cfg  rustfmt.toml
.depot/workflows/: build-image.yml  cicd.yml
.github/workflows/: sampo.yml
.sampo/changesets/: dashing-stormcaller-loviatar.md
godot/: CHANGELOG.md  Cargo.toml  plugin.cfg  settings.tscn  spacemouse.gd  spacemouse.gdextension
godot/src/: lib.rs  settings.rs
lib/: CHANGELOG.md  Cargo.toml
lib/src/: lib.rs  spacemouse.rs  vector3.rs
lib/src/formats/: mod.rs  v0.rs  v1.rs
scripts/: link.nu
src/: lib.rs  settings.rs  spacemouse.rs
