[package]
name = "godot-spacemouse"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"] # Compile this crate to a dynamic C library.

[dependencies]
facet = "0.42.0"
facet-postcard = "0.42.0"
godot = { version = "0.4.5" }
hidapi = { version = "2.6.4", default-features = false, features = [
  "linux-native",
  "macos-shared-device",
  "windows-native",
] }
lazy_static = "1.5.0"

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "fat"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
