[workspace]
resolver = "3"
members = ["godot", "lib"]

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "fat"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
