[package]
name = "spacemouse"
version = "0.1.0"
edition = "2024"

[dependencies]
facet = "0.44.3"
facet-postcard = "0.44.5"
godot = { version = "^0.5.0", optional = true }
hidapi = { version = "2.6.4", default-features = false, features = [
  "linux-native",
  "macos-shared-device",
  "windows-native",
] }
lazy_static = "1.5.0"
parking_lot = "0.12.5"
scopeguard = "1.2.0"

[features]
# Defines a feature named `webp` that does not enable any other features.
godot = ["dep:godot"]
