[package]
name = "spacemouse"
version = "0.0.0"
edition = "2024"

[features]
# Replaces the Vector3 struct with the one from godot-rust
godot = ["dep:godot"]

[dependencies]
binrw = "0.15.0"
facet = "0.44.3"
facet-postcard = "0.44.5"
godot = { version = "^0.5.0", optional = true }
hidapi = { version = "2.6.5", default-features = false, features = [
  "linux-native",
  "macos-shared-device",
  "windows-native",
] }
lazy_static = "1.5.0"
parking_lot = "0.12.5"
scopeguard = "1.2.0"

[dev-dependencies]
rstest = { version = "0.26.1", default-features = false }
